--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       Tuba Farm Equipment
       Tractor selector page
       
-      Author: 
-      Date:   
+      Author: Alex Somoza 
+      Date: 4-25-19
 
       Filename: tractor.html
    -->
